generated/checker-for-evaluation/generated/test-UAF-9462f4ca56e7d2430fdb6dcc8498244acbfc4489/build_logs/1/build_error_log3.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void SAGenTestChecker::checkPreCall(const clang::ento::CallEvent&, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:136:61: error: cannot convert ‘clang::ento::ProgramStateTrait<{anonymous}::SpinLockAcquiredTag>::data_type’ {aka ‘bool’} to ‘const bool*’ in initialization
  136 |   const bool *LockAcquired = State->get<SpinLockAcquiredTag>();
      |                              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
      |                                                             |
      |                                                             clang::ento::ProgramStateTrait<{anonymous}::SpinLockAcquiredTag>::data_type {aka bool}
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/RangedConstraintManager.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporterVisitors.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ExprEngine.h:25,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/CheckerContext.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Checkers/utility.h:4,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:3:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramState.h: In instantiation of ‘typename clang::ento::ProgramStateTrait<T>::data_type clang::ento::ProgramState::get() const [with T = {anonymous}::SpinLockAcquiredTag; typename clang::ento::ProgramStateTrait<T>::data_type = bool]’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:136:61:   required from here
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramState.h:428:42: error: ‘MakeData’ is not a member of ‘clang::ento::ProgramStateTrait<{anonymous}::SpinLockAcquiredTag>’
  428 |     return ProgramStateTrait<T>::MakeData(FindGDM(ProgramStateTrait<T>::GDMIndex()));
      |            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramState.h: In instantiation of ‘clang::ento::ProgramStateRef clang::ento::ProgramStateManager::set(clang::ento::ProgramStateRef, typename clang::ento::ProgramStateTrait<T>::data_type) [with T = {anonymous}::SpinLockAcquiredTag; clang::ento::ProgramStateRef = llvm::IntrusiveRefCntPtr<const clang::ento::ProgramState>; typename clang::ento::ProgramStateTrait<T>::data_type = bool]’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramState.h:870:34:   required from ‘clang::ento::ProgramStateRef clang::ento::ProgramState::set(typename clang::ento::ProgramStateTrait<T>::data_type) const [with T = {anonymous}::SpinLockAcquiredTag; clang::ento::ProgramStateRef = llvm::IntrusiveRefCntPtr<const clang::ento::ProgramState>; typename clang::ento::ProgramStateTrait<T>::data_type = bool]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:81:42:   required from here
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramState.h:642:52: error: ‘MakeVoidPtr’ is not a member of ‘clang::ento::ProgramStateTrait<{anonymous}::SpinLockAcquiredTag>’
  642 |                   ProgramStateTrait<T>::MakeVoidPtr(D));
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
